<?xml version="1.0"?>
<package>
  <name>occurrence_learning</name>
  <version>0.0.1</version>
  <description>Learning and updating the occurence rate of poisson distribution based on trajectories within areas</description>

  <maintainer email="fxj345@cs.bham.ac.uk">Ferdian Jovan</maintainer>

  <license>MIT</license>
  <author email="fxj345@cs.bham.ac.uk">Ferdian Jovan</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>tf</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>human_trajectory</build_depend>
  <build_depend>soma_geospatial_store</build_depend>
  <run_depend>tf</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>human_trajectory</run_depend>
  <run_depend>soma_geospatial_store</run_depend>
</package>
